<resources>
    <string name="app_name">HealthDelivery</string>
    <string name="hint_Email" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_create_account">Create Account</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="develop_name" translatable="false">Ariel Vaz De Alcantara Marinho</string>
    <string name="phone">Phone</string>
    <string name="hint_max_value">Max Value</string>
    <string name="hint_min_value">Min Value</string>
    <string name="btn_register">Register</string>
    <string name="txt_logout_exit">Logout/Exit</string>
    <string name="txt_about">About</string>
    <string name="txt_register">Register</string>
    <string name="title_activity_location">Map</string>
    <string name="btn_edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
