<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
        android:background="@color/colorPrimary">
    <EditText
            android:id="@+id/order_name"
            android:layout_width="263dp"
            android:layout_height="39dp"
            android:hint="Name"
            android:background="@color/et_background"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.485"/>

    <EditText
            android:background="@color/et_background"
            android:id="@+id/phone"
            android:hint="@string/phone"
            android:layout_width="263dp"
            android:layout_height="39dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/order_name"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.485"/>

    <EditText
            android:background="@color/et_background"
            android:id="@+id/value_min"
            android:hint="@string/hint_min_value"
            android:layout_width="263dp"
            android:layout_height="39dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.484"/>
    <EditText
            android:background="@color/et_background"
            android:id="@+id/value_max"
            android:hint="@string/hint_max_value"
            android:layout_width="263dp"
            android:layout_height="39dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/value_min"
            app:layout_constraintHorizontal_bias="0.485"/>
    <Button
            android:text="@string/btn_register"
            android:textColor="#FCFFFD"
            android:textSize="25sp"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:background="@drawable/button_customized"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:id="@+id/Register_Order"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/value_max"/>



</android.support.constraint.ConstraintLayout>


