<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity"
        android:background="@color/login_background">
    <EditText
            android:background="@drawable/edit_text_customized"
            android:layout_width="228dp"
            android:layout_height="57dp"
            android:hint="@string/hint_Email"
            android:id="@+id/et_Email2"
            android:inputType="textEmailAddress"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="56dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:background="@drawable/edit_text_customized"
            android:layout_width="228dp"
            android:layout_height="57dp"
            android:hint="@string/hint_password"
            android:id="@+id/et_Password2"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:inputType="textPassword" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/et_Email2"/>
    <EditText
            android:background="@drawable/edit_text_customized"
            android:layout_width="228dp"
            android:layout_height="57dp"
            android:hint="@string/hint_confirm_password"
            android:id="@+id/et_Confirm_Password"
            android:inputType="textPassword"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/et_Password2"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.497"/>

    <Button android:text="Create Account"
            android:textColor="#FCFFFD"
            android:textSize="12sp"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:background="@drawable/button_customized"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:id="@+id/btn_Create"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/et_Confirm_Password"/>

</android.support.constraint.ConstraintLayout>